--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="scroll_counter">
             <p id="scroll_counter_result">1/3</p>
         </div>
-        
+
         <section>
             <article id="art1">
                 <img class="front" src="./assets/images/art1.png" alt="">
@@ -21,19 +21,12 @@
 
             <article id="art2">
                 <img class="front" src="./assets/images/art2.png" alt="">
-                <div class="video">
-                    <img class="cloudanimation crayoneo" src="./assets/images/art2-bg-crayoneo.png" alt="">
-                    <img class="cloudanimation puzzle" src="./assets/images/art2-bg-puzzle.png" alt="">
-                    <img class="cloudanimation rayos" src="./assets/images/art2-bg-rayos.png" alt="">
-                    <img class="cloudanimation battery" src="./assets/images/art2-bg-battery.png" alt="">
-                    <img class="cloudanimation heart" src="./assets/images/art2-bg-heart.png" alt="">
-                    <img class="cloudanimation eyes" src="./assets/images/art2-bg-eyes.png" alt="">
-                </div>
+                <video id="video2" autoplay muted loop src="./assets/images/videoart2.mp4" alt="">
             </article>
 
             <article id="art3">
                 <img class="front" src="./assets/images/art3.png" alt="">
-                <video id="video3" autoplay muted loop src="./assets/images/video3.mp4" alt="">
+                <video id="video3" autoplay muted loop src="./assets/images/videoart3.mp4" alt="">
             </article>
 
             <article id="art4"></article>
